--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -72,6 +72,7 @@
     justify-content: center;
     position: relative;
     width: 100%;
+    padding-bottom: 3%;
   }
   
   .footer .about-us-button-btn {
