--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -49,7 +49,7 @@
 
 .container-about .section-1 .text-section .description{
     color: #202D3F;
-    font-size: 2.1vh;
+    font-size: 1em;
     font-weight: 500;
     font-style: normal;
     font-family:  'Alegreya', sans-serif;
@@ -106,7 +106,7 @@ margin-top: -0.5%;
     margin-top: 3%;
     font-family: 'Alegreya', serif;
     font-weight: 100;
-    font-size: 2.1vh;
+    font-size: 1em;
 }
 .container-about .section-2 .texts h1{
     line-height: 1.5;
