--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -31,17 +31,20 @@
     font-family: "brandon-grotesque", sans-serif;
     font-style: normal;
     font-weight: 500;
-    font-size: 37px;
+    font-size: 1.8em;
     line-height: 1.15;
 }
 .container-about .section-1 .text-section h3{
     letter-spacing: 2px;
     font-family: "brandon-grotesque", sans-serif;
     font-weight: 500;
-    font-size: 2.2vh;
+    font-size: 1.0em;
     margin-bottom: 5%;
     margin-top: 5%;
     line-height: 1.15;
+}
+.container-about .description .email{
+    font-weight: 900;
 }
 .container-about .description1{
     width: 80%;
