--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,6 +20,7 @@
     padding-left:3%;
     position: relative;
     width: 97%;
+    justify-content: space-between;
   }
   
   .head .header-nav-bar {
