--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,6 @@ input:focus {
     outline: none; /* Removes the default outline */
     box-shadow: none; /* Removes any default box-shadow */
   }
+  input{
+    border: none;
+  }
