--- a/src/pages/Admin/Main/Add/Add.css
+++ b/src/pages/Admin/Main/Add/Add.css
@@ -7,3 +7,23 @@
     flex-direction: column;
     max-width: fit-content;
 }
+.add-container .add-form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.add-container .form-button{
+    display: flex;
+    align-items: flex-end;
+    max-width: fit-content;
+    justify-content: center;
+}
+.add-container .row{
+    padding: 20px 0px;
+}
+.add-container .address-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0px;
+}
