--- a/src/components/Admin_components/AdminNavBar/AdminNavBar.css
+++ b/src/components/Admin_components/AdminNavBar/AdminNavBar.css
@@ -18,7 +18,7 @@
     justify-content: center;
     width: 100%;
     background-color: white;
-    padding: 10px ;
+    padding: 10px 10px 0px 10px;
 }
 .navcontainer .logo img{
     width: 180px;
@@ -36,7 +36,7 @@
 }
 .navcontainer .nav-option a{
     text-decoration: none;
-    color: #000000;
+    color: #202D3F;
     font-family: 'Freight Sans Pro Medium', sans-serif;
     font-size: 1.1em;
     font-weight: 400;
