--- a/src/pages/Admin/Main/Add/Add.css
+++ b/src/pages/Admin/Main/Add/Add.css
@@ -5,7 +5,7 @@
     display: flex;
     position: relative;
     flex-direction: column;
-    max-width: fit-content;
+    max-width: 80%;
 }
 .add-container .add-form{
     display: flex;
@@ -20,10 +20,20 @@
 }
 .add-container .row{
     padding: 20px 0px;
+    width: 100%;
 }
 .add-container .address-button{
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 10px 0px;
+}
+.add-container .check-box{
+    display: flex;
+    align-items: flex-end;
+}
+.add-container .next-button{
+    display: flex;
+    justify-content: end;
+    align-items: center;
 }
