--- a/src/components/Admin_components/AdminNavBar/AdminNavBar.css
+++ b/src/components/Admin_components/AdminNavBar/AdminNavBar.css
@@ -11,6 +11,7 @@
     z-index: 1;
     gap: 50px;
     height: 100%;
+    border-right:0.5px solid rgba(32, 45, 63, 0.2);
 }
 .navcontainer .logo{
     display: flex;
