--- a/src/pages/Admin/Login/Login.css
+++ b/src/pages/Admin/Login/Login.css
@@ -11,32 +11,43 @@
     height: 100vh;
     overflow: hidden;
 }
-.center{
+.login-page .center{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 400px;
+  width: 500px;
   background: white;
   border-radius: 10px;
   box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.center img{
+.login-page .center img{
   text-align: center;
   padding: 20px 0;
   border-bottom: 1px solid silver;
-  width: 100%;
+  width: 250px;
+
 }
-.center form{
-  padding: 0 40px;
+.login-page .center form{
+  padding: 20px 40px;
   box-sizing: border-box;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-form .txt_field{
+.login-page form .txt_field{
   position: relative;
   border-bottom: 2px solid #adadad;
   margin: 30px 0;
+  width: 100%;
 }
-.txt_field input{
+.login-page .txt_field input{
   width: 100%;
   padding: 0 5px;
   height: 40px;
@@ -45,7 +56,7 @@ form .txt_field{
   background: none;
   outline: none;
 }
-.txt_field label{
+.login-page .txt_field label{
   position: absolute;
   top: 50%;
   left: 5px;
@@ -55,7 +66,7 @@ form .txt_field{
   pointer-events: none;
   transition: .5s;
 }
-.txt_field span::before{
+.login-page .txt_field span::before{
   content: '';
   position: absolute;
   top: 40px;
@@ -65,25 +76,26 @@ form .txt_field{
   background: #2691d9;
   transition: .5s;
 }
-.txt_field input:focus ~ label,
-.txt_field input:valid ~ label{
+.login-page .txt_field input:focus ~ label,
+.login-page .txt_field input:valid ~ label{
   top: -5px;
   color: #2691d9;
 }
-.txt_field input:focus ~ span::before,
-.txt_field input:valid ~ span::before{
+.login-page .txt_field input:focus ~ span::before,
+.login-page .txt_field input:valid ~ span::before{
   width: 100%;
 }
-.pass{
+.login-page .pass{
   margin: -5px 0 20px 5px;
   color: #a6a6a6;
   cursor: pointer;
 }
-.pass:hover{
+.login-page .pass:hover{
   text-decoration: underline;
 }
-input[type="submit"]{
-  width: 100%;
+.login-page input[type="submit"]{
+  width:250px ;
+  
   height: 50px;
   border: 1px solid;
   background:linear-gradient(120deg,#0c5281, #290538);
@@ -94,20 +106,7 @@ input[type="submit"]{
   cursor: pointer;
   outline: none;
 }
-input[type="submit"]:hover{
+.login-page input[type="submit"]:hover{
   border-color: #2691d9;
   transition: .5s;
-}
-.signup_link{
-  margin: 30px 0;
-  text-align: center;
-  font-size: 16px;
-  color: #666666;
-}
-.signup_link a{
-  color: #2691d9;
-  text-decoration: none;
-}
-.signup_link a:hover{
-  text-decoration: underline;
 }
