--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,7 +5,7 @@
 
 .home-container .items-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+  grid-template-columns: repeat(4, 1fr);
     gap: 16px;
 }
 
