--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -105,8 +105,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 3% 0;
-  max-height: 300px;
+  padding: 0;
+  max-height: 150px;
   overflow-y: scroll;
   border: 1px solid lightgray;
   border-radius: 5px;
@@ -118,12 +118,12 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  padding: 10px;
+  padding: 1px;
   /* background: white; */
   color:black;
   border-radius: 5px;
   /* border: 0.4px solid lightgray; */
-  margin-top:3px;
+
   justify-content: flex-start;
   align-items: center;
 }
