update function final draft 1

--- a/src/pages/Admin/Main/Add/Add.css
+++ b/src/pages/Admin/Main/Add/Add.css
@@ -37,3 +37,13 @@
     justify-content: end;
     align-items: center;
 }
+.add-container .previous-button{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+.add-container .save-button{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
