--- a/src/pages/Admin/Main/Add/Add.css
+++ b/src/pages/Admin/Main/Add/Add.css
@@ -19,7 +19,7 @@
     justify-content: center;
 }
 .add-container .row{
-    padding: 20px 0px;
+    padding: 0px 0px;
     width: 100%;
 }
 .add-container .address-button{
@@ -46,4 +46,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+.add-container .hidden-inputs{
+    display: none;
 }
