* Api integration complelted on shope profile page

--- a/src/pages/ShopProfile/ShopProfile.css
+++ b/src/pages/ShopProfile/ShopProfile.css
@@ -234,7 +234,7 @@
     text-align: right;
     white-space: nowrap;
     width: fit-content;
-    width: 35%;
+    width: 40px;
   }
   
   .shop-profile .frame-13 {
