--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -193,6 +193,7 @@
     position: relative;
     width: 100%;
     padding: 20px 0;
+    gap: 10px;
   }
   
   .footer .footer-section-3 {
@@ -203,8 +204,28 @@
     padding: 0px 3%;
     position: relative;
   }
+  .footer .footer-section-4 {
+    align-items: center;
+    align-self: stretch;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0px 3%;
+    position: relative;
+  }
   
   .footer .text-wrapper-5 {
+    color: #ffffff;
+    font-family: 'Freight Sans Pro Medium', sans-serif;
+    font-size: 1em;
+    font-weight: 500;
+    letter-spacing: 0px;
+    line-height: normal;
+    position: relative;
+    white-space: nowrap;
+    width: fit-content;
+  }
+  .footer .credit{
+    text-decoration: none;
     color: #ffffff;
     font-family: 'Freight Sans Pro Medium', sans-serif;
     font-size: 1em;
