--- a/src/pages/ShopProfile/ShopProfile.css
+++ b/src/pages/ShopProfile/ShopProfile.css
@@ -29,6 +29,7 @@
     padding: 20px 0px;
     position: relative;
     width: 50%;
+    flex-direction: column;
   }
   
   .shop-profile .images-2 {
@@ -197,7 +198,7 @@
     display: inline-flex;
     flex: 0 0 auto;
     flex-direction: column;
-    gap: 10px;
+    gap: 4px;
     padding: 0px 30px 0px 0px;
     position: relative;
     width: 50%;
@@ -215,6 +216,7 @@
     font-weight: 500;
     letter-spacing: 1px;
     line-height: normal;
+    height: 20px;
   }
   .shop-profile .days {
     
@@ -234,7 +236,7 @@
     text-align: right;
     white-space: nowrap;
     width: fit-content;
-    width: 40px;
+    width: 70px;
   }
   
   .shop-profile .frame-13 {
