--- a/src/pages/ShopProfile/ShopProfile.css
+++ b/src/pages/ShopProfile/ShopProfile.css
@@ -122,11 +122,13 @@
   
   .shop-profile .frame-9-links {
     align-items: center;
-    display: inline-flex;
+    display: flex;
+    flex-direction: row;
     flex: 0 0 auto;
     gap: 15px;
-    justify-content: center;
     position: relative;
+    overflow-x: wrap;
+    width: 700px;
   }
   .shop-profile .icon-links{
     text-decoration: none;
@@ -201,7 +203,7 @@
     gap: 4px;
     padding: 0px 30px 0px 0px;
     position: relative;
-    width: 50%;
+    width: fit-content;
   }
   .shop-profile .frame-days {
     align-items: flex-start;
@@ -216,17 +218,18 @@
     font-weight: 500;
     letter-spacing: 1px;
     line-height: normal;
+    justify-content: flex-start;
     height: 20px;
   }
   .shop-profile .days {
-    
     margin-top: -1px;
-    position: relative;
-    text-align: right;
-    white-space: nowrap;
-    width: fit-content;
-    width: 65%;
     text-transform: uppercase;
+    min-width: 110px;
+    overflow-x: hidden;
+    align-self: flex-start;
+    align-items: flex-start;
+    display: flex;
+    margin-right: 0px;
   }
   .shop-profile .time {
    
