--- a/src/pages/ShopProfile/ShopProfile.css
+++ b/src/pages/ShopProfile/ShopProfile.css
@@ -16,6 +16,7 @@
     position: relative;
     width: 100%;
     padding: 50px 0;
+    margin-bottom: -95px;
   }
   
   .shop-profile .section1-part1 {
@@ -236,7 +237,7 @@
     line-height: normal;
     margin-top: -1px;
     position: relative;
-    text-align: right;
+    text-align: left;
     white-space: nowrap;
     width: fit-content;
     width: 70px;
